--- a/MainProgram/mainwindow.ui
+++ b/MainProgram/mainwindow.ui
@@ -14,8 +14,8 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <layout class="QHBoxLayout" name="horizontalLayout_2">
-    <item>
+   <layout class="QFormLayout" name="formLayout_3">
+    <item row="0" column="0">
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
        <widget class="QToolButton" name="train_btm">
@@ -46,7 +46,7 @@
       </item>
      </layout>
     </item>
-    <item>
+    <item row="0" column="1">
      <widget class="QStackedWidget" name="stackedWidget">
       <widget class="QWidget" name="train">
        <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -292,13 +292,26 @@
            <enum>QFrame::Raised</enum>
           </property>
           <widget class="QWidget" name="info_stk">
-           <widget class="QWidget" name="layoutWidget">
+           <widget class="QLabel" name="label_7">
             <property name="geometry">
              <rect>
-              <x>180</x>
-              <y>20</y>
-              <width>211</width>
-              <height>221</height>
+              <x>446</x>
+              <y>10</y>
+              <width>168</width>
+              <height>31</height>
+             </rect>
+            </property>
+            <property name="text">
+             <string/>
+            </property>
+           </widget>
+           <widget class="QWidget" name="">
+            <property name="geometry">
+             <rect>
+              <x>190</x>
+              <y>0</y>
+              <width>174</width>
+              <height>169</height>
              </rect>
             </property>
             <layout class="QGridLayout" name="gridLayout">
@@ -310,9 +323,9 @@
               </widget>
              </item>
              <item row="0" column="1">
-              <widget class="QLineEdit" name="username_lineEdit">
-               <property name="enabled">
-                <bool>false</bool>
+              <widget class="QLabel" name="username_lab">
+               <property name="text">
+                <string/>
                </property>
               </widget>
              </item>
@@ -320,13 +333,6 @@
               <widget class="QLabel" name="passwd_label">
                <property name="text">
                 <string>密码：</string>
-               </property>
-              </widget>
-             </item>
-             <item row="1" column="1">
-              <widget class="QPushButton" name="passwd_btn">
-               <property name="text">
-                <string>修改密码</string>
                </property>
               </widget>
              </item>
@@ -338,9 +344,9 @@
               </widget>
              </item>
              <item row="2" column="1">
-              <widget class="QLineEdit" name="name_lineEdit">
-               <property name="enabled">
-                <bool>false</bool>
+              <widget class="QLabel" name="name_lab">
+               <property name="text">
+                <string/>
                </property>
               </widget>
              </item>
@@ -352,9 +358,9 @@
               </widget>
              </item>
              <item row="3" column="1">
-              <widget class="QLineEdit" name="sex_lineEdit">
-               <property name="enabled">
-                <bool>false</bool>
+              <widget class="QLabel" name="sex_lab">
+               <property name="text">
+                <string/>
                </property>
               </widget>
              </item>
@@ -366,9 +372,9 @@
               </widget>
              </item>
              <item row="4" column="1">
-              <widget class="QLineEdit" name="phone_lineEdit">
-               <property name="enabled">
-                <bool>false</bool>
+              <widget class="QLabel" name="phone_lab">
+               <property name="text">
+                <string/>
                </property>
               </widget>
              </item>
@@ -380,9 +386,42 @@
               </widget>
              </item>
              <item row="5" column="1">
-              <widget class="QLineEdit" name="email_lineEdit">
-               <property name="enabled">
-                <bool>false</bool>
+              <widget class="QLabel" name="email_lab">
+               <property name="text">
+                <string/>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="1">
+              <widget class="QPushButton" name="password_reset">
+               <property name="text">
+                <string>修改密码</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </widget>
+           <widget class="QWidget" name="">
+            <property name="geometry">
+             <rect>
+              <x>180</x>
+              <y>200</y>
+              <width>201</width>
+              <height>32</height>
+             </rect>
+            </property>
+            <layout class="QHBoxLayout" name="horizontalLayout_2">
+             <item>
+              <widget class="QPushButton" name="info_updatebtn">
+               <property name="text">
+                <string>修改</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QPushButton" name="info_query_btn">
+               <property name="text">
+                <string>刷新</string>
                </property>
               </widget>
              </item>
