--- a/MainProgram/mainwindow.ui
+++ b/MainProgram/mainwindow.ui
@@ -305,7 +305,7 @@
              <string/>
             </property>
            </widget>
-           <widget class="QWidget" name="">
+           <widget class="QWidget" name="layoutWidget">
             <property name="geometry">
              <rect>
               <x>190</x>
@@ -401,7 +401,7 @@
              </item>
             </layout>
            </widget>
-           <widget class="QWidget" name="">
+           <widget class="QWidget" name="layoutWidget">
             <property name="geometry">
              <rect>
               <x>180</x>
@@ -428,7 +428,61 @@
             </layout>
            </widget>
           </widget>
-          <widget class="QWidget" name="pass_stk"/>
+          <widget class="QWidget" name="pass_stk">
+           <widget class="QTableWidget" name="passinfo">
+            <property name="geometry">
+             <rect>
+              <x>130</x>
+              <y>10</y>
+              <width>201</width>
+              <height>261</height>
+             </rect>
+            </property>
+            <column>
+             <property name="text">
+              <string>乘客姓名</string>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>身份证号</string>
+             </property>
+            </column>
+           </widget>
+           <widget class="QWidget" name="">
+            <property name="geometry">
+             <rect>
+              <x>360</x>
+              <y>170</y>
+              <width>68</width>
+              <height>100</height>
+             </rect>
+            </property>
+            <layout class="QVBoxLayout" name="verticalLayout_4">
+             <item>
+              <widget class="QPushButton" name="add_pass">
+               <property name="text">
+                <string>添加</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QPushButton" name="delete_pass">
+               <property name="text">
+                <string>删除</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QPushButton" name="refresh_pass">
+               <property name="text">
+                <string>刷新</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </widget>
+          </widget>
           <widget class="QWidget" name="history_stk"/>
           <widget class="QWidget" name="money_stk">
            <widget class="QLabel" name="money_text">
