--- a/MainProgram/mainwindow.ui
+++ b/MainProgram/mainwindow.ui
@@ -429,15 +429,121 @@
            </widget>
           </widget>
           <widget class="QWidget" name="pass_stk">
-           <widget class="QTableWidget" name="passinfo">
+           <layout class="QHBoxLayout" name="horizontalLayout_3">
+            <item>
+             <spacer name="horizontalSpacer_2">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>40</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item>
+             <widget class="QTableWidget" name="passinfo">
+              <column>
+               <property name="text">
+                <string>乘客姓名</string>
+               </property>
+              </column>
+              <column>
+               <property name="text">
+                <string>身份证号</string>
+               </property>
+              </column>
+             </widget>
+            </item>
+            <item>
+             <layout class="QVBoxLayout" name="verticalLayout_4">
+              <item>
+               <widget class="QPushButton" name="add_pass">
+                <property name="text">
+                 <string>添加</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QPushButton" name="delete_pass">
+                <property name="text">
+                 <string>删除</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QPushButton" name="refresh_pass">
+                <property name="text">
+                 <string>刷新</string>
+                </property>
+               </widget>
+              </item>
+             </layout>
+            </item>
+            <item>
+             <spacer name="horizontalSpacer_3">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>40</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+           </layout>
+           <zorder>refresh_pass</zorder>
+           <zorder>add_pass</zorder>
+           <zorder>delete_pass</zorder>
+           <zorder>horizontalSpacer_2</zorder>
+           <zorder>passinfo</zorder>
+           <zorder>horizontalSpacer_3</zorder>
+           <zorder>layoutWidget</zorder>
+          </widget>
+          <widget class="QWidget" name="history_stk">
+           <widget class="QTableWidget" name="ticketinfo">
             <property name="geometry">
              <rect>
-              <x>130</x>
-              <y>10</y>
-              <width>201</width>
-              <height>261</height>
+              <x>30</x>
+              <y>20</y>
+              <width>531</width>
+              <height>221</height>
              </rect>
             </property>
+            <property name="editTriggers">
+             <set>QAbstractItemView::NoEditTriggers</set>
+            </property>
+            <property name="selectionMode">
+             <enum>QAbstractItemView::SingleSelection</enum>
+            </property>
+            <property name="selectionBehavior">
+             <enum>QAbstractItemView::SelectRows</enum>
+            </property>
+            <property name="sortingEnabled">
+             <bool>true</bool>
+            </property>
+            <property name="rowCount">
+             <number>0</number>
+            </property>
+            <property name="columnCount">
+             <number>9</number>
+            </property>
+            <attribute name="horizontalHeaderDefaultSectionSize">
+             <number>55</number>
+            </attribute>
+            <attribute name="horizontalHeaderStretchLastSection">
+             <bool>true</bool>
+            </attribute>
+            <attribute name="verticalHeaderVisible">
+             <bool>false</bool>
+            </attribute>
+            <attribute name="verticalHeaderDefaultSectionSize">
+             <number>21</number>
+            </attribute>
             <column>
              <property name="text">
               <string>乘客姓名</string>
@@ -445,45 +551,59 @@
             </column>
             <column>
              <property name="text">
-              <string>身份证号</string>
+              <string>车次</string>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>列车类型</string>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>始发站</string>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>终点站</string>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>发车时间</string>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>到达时间</string>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>号码</string>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>价格</string>
              </property>
             </column>
            </widget>
-           <widget class="QWidget" name="">
+           <widget class="QPushButton" name="refresh_btn">
             <property name="geometry">
              <rect>
-              <x>360</x>
-              <y>170</y>
-              <width>68</width>
-              <height>100</height>
+              <x>240</x>
+              <y>250</y>
+              <width>113</width>
+              <height>32</height>
              </rect>
             </property>
-            <layout class="QVBoxLayout" name="verticalLayout_4">
-             <item>
-              <widget class="QPushButton" name="add_pass">
-               <property name="text">
-                <string>添加</string>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QPushButton" name="delete_pass">
-               <property name="text">
-                <string>删除</string>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QPushButton" name="refresh_pass">
-               <property name="text">
-                <string>刷新</string>
-               </property>
-              </widget>
-             </item>
-            </layout>
+            <property name="text">
+             <string>刷新</string>
+            </property>
            </widget>
           </widget>
-          <widget class="QWidget" name="history_stk"/>
           <widget class="QWidget" name="money_stk">
            <widget class="QLabel" name="money_text">
             <property name="geometry">
