only a bug to de.cheer up.

--- a/MainProgram/orderdialog.ui
+++ b/MainProgram/orderdialog.ui
@@ -54,6 +54,13 @@
        </property>
       </spacer>
      </item>
+     <item>
+      <widget class="QLabel" name="res_label">
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
    <item>
