--- a/MainProgram/mainwindow.ui
+++ b/MainProgram/mainwindow.ui
@@ -317,6 +317,9 @@
           <property name="frameShadow">
            <enum>QFrame::Raised</enum>
           </property>
+          <property name="currentIndex">
+           <number>2</number>
+          </property>
           <widget class="QWidget" name="info_stk">
            <layout class="QVBoxLayout" name="verticalLayout_5">
             <item>
@@ -579,109 +582,106 @@
            </layout>
           </widget>
           <widget class="QWidget" name="history_stk">
-           <widget class="QTableWidget" name="ticketinfo">
-            <property name="geometry">
-             <rect>
-              <x>30</x>
-              <y>20</y>
-              <width>571</width>
-              <height>221</height>
-             </rect>
-            </property>
-            <property name="editTriggers">
-             <set>QAbstractItemView::NoEditTriggers</set>
-            </property>
-            <property name="selectionMode">
-             <enum>QAbstractItemView::SingleSelection</enum>
-            </property>
-            <property name="selectionBehavior">
-             <enum>QAbstractItemView::SelectRows</enum>
-            </property>
-            <property name="sortingEnabled">
-             <bool>true</bool>
-            </property>
-            <property name="rowCount">
-             <number>0</number>
-            </property>
-            <property name="columnCount">
-             <number>10</number>
-            </property>
-            <attribute name="horizontalHeaderDefaultSectionSize">
-             <number>55</number>
-            </attribute>
-            <attribute name="horizontalHeaderStretchLastSection">
-             <bool>true</bool>
-            </attribute>
-            <attribute name="verticalHeaderVisible">
-             <bool>false</bool>
-            </attribute>
-            <attribute name="verticalHeaderDefaultSectionSize">
-             <number>21</number>
-            </attribute>
-            <column>
-             <property name="text">
-              <string>乘客姓名</string>
-             </property>
-            </column>
-            <column>
-             <property name="text">
-              <string>列车类型</string>
-             </property>
-            </column>
-            <column>
-             <property name="text">
-              <string>列车编号</string>
-             </property>
-            </column>
-            <column>
-             <property name="text">
-              <string>车票类型</string>
-             </property>
-            </column>
-            <column>
-             <property name="text">
-              <string>车票号码</string>
-             </property>
-            </column>
-            <column>
-             <property name="text">
-              <string>始发站</string>
-             </property>
-            </column>
-            <column>
-             <property name="text">
-              <string>终点站</string>
-             </property>
-            </column>
-            <column>
-             <property name="text">
-              <string>发车时间</string>
-             </property>
-            </column>
-            <column>
-             <property name="text">
-              <string>到达时间</string>
-             </property>
-            </column>
-            <column>
-             <property name="text">
-              <string>价格</string>
-             </property>
-            </column>
-           </widget>
-           <widget class="QPushButton" name="refresh_btn">
-            <property name="geometry">
-             <rect>
-              <x>240</x>
-              <y>250</y>
-              <width>113</width>
-              <height>32</height>
-             </rect>
-            </property>
-            <property name="text">
-             <string>刷新</string>
-            </property>
-           </widget>
+           <layout class="QVBoxLayout" name="verticalLayout_6">
+            <item>
+             <widget class="QTableWidget" name="ticketinfo">
+              <property name="editTriggers">
+               <set>QAbstractItemView::NoEditTriggers</set>
+              </property>
+              <property name="selectionMode">
+               <enum>QAbstractItemView::SingleSelection</enum>
+              </property>
+              <property name="selectionBehavior">
+               <enum>QAbstractItemView::SelectRows</enum>
+              </property>
+              <property name="sortingEnabled">
+               <bool>true</bool>
+              </property>
+              <property name="rowCount">
+               <number>0</number>
+              </property>
+              <property name="columnCount">
+               <number>8</number>
+              </property>
+              <attribute name="horizontalHeaderDefaultSectionSize">
+               <number>55</number>
+              </attribute>
+              <attribute name="horizontalHeaderStretchLastSection">
+               <bool>true</bool>
+              </attribute>
+              <attribute name="verticalHeaderVisible">
+               <bool>false</bool>
+              </attribute>
+              <attribute name="verticalHeaderDefaultSectionSize">
+               <number>21</number>
+              </attribute>
+              <column>
+               <property name="text">
+                <string>乘客姓名</string>
+               </property>
+              </column>
+              <column>
+               <property name="text">
+                <string>车次</string>
+               </property>
+              </column>
+              <column>
+               <property name="text">
+                <string>座位</string>
+               </property>
+              </column>
+              <column>
+               <property name="text">
+                <string>始发站</string>
+               </property>
+              </column>
+              <column>
+               <property name="text">
+                <string>终点站</string>
+               </property>
+              </column>
+              <column>
+               <property name="text">
+                <string>发车时间</string>
+               </property>
+              </column>
+              <column>
+               <property name="text">
+                <string>到达时间</string>
+               </property>
+              </column>
+              <column>
+               <property name="text">
+                <string>价格</string>
+               </property>
+              </column>
+             </widget>
+            </item>
+            <item>
+             <layout class="QHBoxLayout" name="horizontalLayout_8">
+              <item>
+               <spacer name="horizontalSpacer_8">
+                <property name="orientation">
+                 <enum>Qt::Horizontal</enum>
+                </property>
+                <property name="sizeHint" stdset="0">
+                 <size>
+                  <width>40</width>
+                  <height>20</height>
+                 </size>
+                </property>
+               </spacer>
+              </item>
+              <item>
+               <widget class="QPushButton" name="refresh_btn">
+                <property name="text">
+                 <string>刷新</string>
+                </property>
+               </widget>
+              </item>
+             </layout>
+            </item>
+           </layout>
           </widget>
           <widget class="QWidget" name="money_stk">
            <widget class="QLabel" name="money_text">
